<resources>
    <string name="app_name">Optymalizator kosztów zakupów</string>
    <string name="form">Dodaj listę zakupów</string>
    <string name="AddGroceryButton">Dodaj listę zakupów</string>
    <string name="AddProductButton">Dodaj Product</string>
    <string name="write_name_product">Wpisz nazwę produktu</string>
    <string name="input_amount">ilość</string>
    <string name="save">Zapisz</string>
    <string name="input_grocery_list_name">Nazwa listy zakupów</string>
    <string name="added_grocery_list_button">Dodane listy zakupów</string>
    <string name="GroceryLists">Listy zakupów</string>
    <string name="findProducts">Produkty</string>
    <string name="bestShop">Najtańszy sklep</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Listy zakupów</string>
    <string name="tab_text_2">Produkty</string>
    <string name="tab_text_3">Najtańszy sklep</string>
    <string name="name_grocery_list">lista1</string>
    <string name="addedDate">Data dodania:</string>
    <string name="select">Zaznacz</string>
    <string name="buttonNext">Przejdź dalej</string>
    <string name="count">10</string>
    <string name="productName">Nazwa produktu</string>
    <string name="price">3.99</string>
    <string name="shopName">Nazwa sklepu:</string>
    <string name="valuesOfPurchases">0.00 zł</string>
    <string name="see_selected">zobacz wybrane</string>
    <string name="promotional_newsletter">Gazetki promocyjne</string>
    <string name="product_name">Pieprz czarny</string>
    <string name="attention_button">Uwaga</string>
    <string name="currency">zł</string>
    <string name="textviewAmount">Ilość:</string>
    <string name="product_name_grocery">Produkt z listy zakupów:</string>
    <string name="eleclerc">Eleclerc</string>
    <string name="selected">wybrane</string>
    <string name="passsword">hasło</string>
    <string name="sign_in">Zaloguj</string>
    <string name="sign_up">Zarejestruj</string>
    <string name="username">login</string>
    <string name="passsword_confirmation">powtórzone hasło</string>
    <string name="create_account">Utwórz konto</string>
    <string name="GoToMainActivity">Przejdź do głównej aktywności</string>
    <string name="button_newsletter_name">Button</string>
    <string name="dsdsd">dsdsd</string>
    <string name="todo">todo</string>
    <string name="start_end_date">04/05-10/05</string>
</resources>