<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_grocery_list_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="29dp"
        android:hint="@string/input_grocery_list_name"
        android:minHeight="48dp"
        android:textColorHint="#757575"  />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_grocery_list_rv"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="275dp"
        android:layout_marginEnd="30dp" />

    <Button
        android:id="@+id/add_product_button"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="185dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="10dp"
        android:text="@string/AddProductButton" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_name_product"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_grocery_list_name"
        android:layout_alignParentStart="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/write_name_product"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_amount"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="17dp"
        android:hint="@string/input_amount"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/saveGroceryButton"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="29dp"
        android:text="@string/save" />


</RelativeLayout>