<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud2"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/addGroceryList"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginStart="60dp"
        android:background="@drawable/rounded_button"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="@string/AddGroceryButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/MyButtonStyle" />

    <Button
        android:id="@+id/cheapestShoppingButton"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginStart="60dp"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="60dp"
        android:text="@string/bestShop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addGroceryList"
        style="@style/MyButtonStyle"/>

    <Button
        android:id="@+id/promotionalNewsletterButton"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginTop="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/rounded_button"
        android:text="@string/promotional_newsletter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cheapestShoppingButton"
        style="@style/MyButtonStyle"/>

</androidx.constraintlayout.widget.ConstraintLayout>