<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginTop="10dp"
    android:layout_height="120dp"
    app:cardCornerRadius="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="134dp"
        android:orientation="vertical"
        android:background="@color/cardBackgroundColor"
        android:padding="@dimen/cardview_default_radius">

        <TextView
            android:id="@+id/textViewShopName"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="19dp"
            android:padding="@dimen/cardview_default_radius"
            android:text="@string/shopName"
            android:textSize="20sp"
            app:errorEnabled="true" />

        <TextView
            android:id="@+id/textViewCostValue"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="68dp"
            android:text="@string/valuesOfPurchases"
            android:textSize="20sp"
            app:errorEnabled="true" />

        <Button
            android:id="@+id/seeSelectedProducts"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/rounded_button"
            style="@style/MyButtonStyle"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="16dp"
            android:text="@string/selected"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/attention_button"
            android:layout_width="37dp"
            android:layout_height="32dp"
            android:layout_below="@+id/textViewShopName"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="11dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:layout_toEndOf="@+id/textViewCostValue"
            app:srcCompat="@drawable/warning_icon_48x48px" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>